k8s/dev/temp.yaml
apiVersion: v1
kind: Service
metadata:
  name: employees
  namespace: dev
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: employees
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: employees
  name: employees
  namespace: dev
spec:
  replicas: 3
  selector:
    matchLabels:
      app: employees
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: employees
    spec:
      containers:
      - image: nogada/employees
        imagePullPolicy: IfNotPresent
        livenessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 60
        name: employees
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 5
        resources:
          limits:
            cpu: 500m
            memory: 512Mi
          requests:
            cpu: 300m
            memory: 256Mi
        volumeMounts:
        - mountPath: /app/config
          name: spring-properties
      volumes:
      - configMap:
          name: config-2cfbb9d644
        name: spring-properties
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: employees
  namespace: dev
spec:
  rules:
  - host: dev.sam.kubepia.net
    http:
      paths:
      - backend:
          service:
            name: employees
            port:
              number: 80
        path: /
        pathType: Prefix
